--- a/heaterController/src/main/res/layout/activity_main.xml
+++ b/heaterController/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mercedes.vidito.myapplicationtest.MainActivity">
+    tools:context="com.mercedes.vidito.heatercontroller.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
