--- a/heaterController/src/main/res/layout/mainscreen.xml
+++ b/heaterController/src/main/res/layout/mainscreen.xml
@@ -8,10 +8,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mercedes.vidito.heatercontroller.MainActivity">
+    tools:context="com.mercedes.vidito.heatercontroller.MainScreen">
 
-    <TextView
+    <Button
+        android:id="@+id/button_connect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/connect_text"
+        android:textSize="15sp"
+        android:drawableLeft="@drawable/arduino"
+        android:layout_centerHorizontal="true"        />
 </RelativeLayout>
