--- a/heaterController/src/main/res/layout/mainscreen.xml
+++ b/heaterController/src/main/res/layout/mainscreen.xml
@@ -14,7 +14,7 @@
         android:id="@+id/button_connect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/connect_text"
+        android:text="@string/connect"
         android:textSize="15sp"
         android:drawableLeft="@drawable/arduino"
         android:layout_centerHorizontal="true"        />
